--- a/apps/templates/index.html
+++ b/apps/templates/index.html
@@ -222,7 +222,7 @@
         <input type="number" id="freq_recent" step="0.01" required />
       </div>
 
-      <button type="submit">🚀 Predict Fraud</button>
+      <button type="submit">🚀 PREDICT </button>
     </form>
 
     <div id="result" class="result"></div>
